fix: fixed comment getting
